<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1.0dip"
        android:layout_marginBottom="5dip" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/order_img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/default_male" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dip"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/order_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/order_commcasus"
                    android:textColor="#222"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/order_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_toRightOf="@+id/order_title"
                    android:text="@string/order_price"
                    android:textColor="#00abf1"
                    android:textSize="15sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/order_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/loading"
                    android:textColor="#222"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/order_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:singleLine="true"
                    android:text="@string/cnum"
                    android:textColor="#222"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/order_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/order_going"
                    android:textColor="#00d784"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1.0dip"
        android:layout_marginTop="5dip"
        android:background="@android:color/holo_green_dark" />

</LinearLayout>
